# terraform-aws-sso-elevator

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CACHE_IMPLEMENTATION.md  CLAUDE.md  README.md  SECURITY.md  attribute_syncer_lambda.tf  chat_platform.tf  check_python_version.tf  config.tf  data.tf  dynamodb.tf  layers.tf  locals.tf  moved.tf  outputs.tf  perm_revoker_lambda.tf  run-tests.sh  s3.tf  secrets.tf  sheduler_group.tf  slack_handler_lambda.tf  sns.tf  validation.tf  vars.tf  versions.tf
.github/: dependabot.yml
.github /: CODEOWNERS
.github/workflows/: base.yml  build_docker.yml  code-guru.yml  codeql.yml  cursor-code-review.yml  python-ci.yml  review.yml
.kiro/hooks/: export-requirements-txt.kiro.hook
.kiro/specs/attribute-based-group-sync/: design.md  requirements.md  tasks.md
.kiro/specs/config-s3-migration/: design.md  requirements.md  tasks.md
.kiro/specs/management-account-access-warning/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/teams-messaging-integration/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/steering/: design.md
athena_query/: create_table.md  fix_path.sh  query.md
docs/: CACHE_IMPLEMENTATION.md  CONFIGURATION.md  DEPLOYMENT.md  FEATURES.md  GROUP_ACCESS.md  LAMBDAS.md  SLACK_TEAMS_PARITY.md  SLACK_VS_APP_LOGIC.md  docs.md
examples/complete/: .gitignore  README.md  main.tf  outputs.tf  versions.tf
examples/teams/: README.md  main.tf  variables.tf  versions.tf
layer/: deploy_requirements.txt  pyproject.toml  requirements.txt
layers/powertools-pydantic/: pyproject.toml
layers/python-boto3/: pyproject.toml
layers/python-slack-bolt/: pyproject.toml
src/: .gitignore  access_control.py  analytics.py  attribute_mapper.py  attribute_syncer.py  base.py  cache.py  check_python_version.py  config.py  deploy_requirements.txt  dynamodb.py  errors.py  events.py  group.py  main.py  organizations.py  permission_duration_options.py  permissions.py  ports.py  pyproject.toml  request_store.py  requirements.txt  revoker.py  s3.py  schedule.py  setup.sh  slack.py  slack_app.py  slack_helpers.py  sso.py  statement.py  sync_config.py  sync_notifications.py  sync_state.py  teams_activity_helpers.py  teams_adapter.py  teams_cards.py  teams_handlers.py  teams_notifier.py  teams_runtime.py  (+4 more)
src/docker/: Dockerfile  Dockerfile.attribute_syncer  Dockerfile.layer  Dockerfile.requester  Dockerfile.revoker
src/entities/: __init__.py  aws.py  elevator_request.py  model.py  slack.py  teams.py
src/requester/common/: api_gateway.py  context.py
src/requester/slack/: slack_app.py  slack_helpers.py
src/requester/teams/: __init__.py  teams_activity_helpers.py  teams_approval_deferred.py  teams_approver_ping.py  teams_bot_framework_path_encoding.py  teams_card_action_parse.py  teams_cards.py  teams_deps.py  teams_handlers.py  teams_notifier.py  teams_runtime.py  teams_threading.py  teams_users.py
src/tests/: README.md  conftest.py  strategies.py  test_access_control.py  test_account_warning_messages.py  test_attribute_mapper.py  test_attribute_syncer.py  test_cache.py  test_config.py  test_group.py  test_main.py  test_model_serialization.py  test_mtls_client_cert.py  test_organizations_management_account.py  test_permission_duration_options.py  test_permissions.py  test_revoker_slack_paths.py  test_slack_helpers.py  test_sso.py  test_sync_audit.py  test_sync_config.py  test_sync_notifications.py  test_sync_state.py  test_teams_approver_roster.py  test_teams_messaging.py  test_teams_thread_notifications.py  utils.py
tests/: localstack-backend.tf  localstack.tfvars
