[project]
name = "layers"
version = "0.1.0"
description = ""
authors = [
    {name = "EreminAnton", email = "mobessona2@gmail.com"}
]
requires-python = ">=3.13"
dynamic = []
dependencies = [
    "slack-bolt>=1.26.0",
    "aws-lambda-powertools[parser]>=2.14.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = []
