[tool.poetry]
name = "sso-elevator"
version = "0.1.0"
description = ""
authors = ["EreminAnton <mobessona2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.10"
boto3-stubs = {extras = ["dynamodb", "identitystore", "organizations", "scheduler", "sso-admin"], version = "^1.26.115"}
[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
black = "^23.1.0"

# from lambda layers
pydantic = "^1.10.7"
aws-lambda-powertools = "^2.11.0"
boto3 = "^1.26.97"
slack-bolt = "^1.17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 140

[tool.ruff]
line-length = 140

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["src/tests"]
xfail_strict = true
filterwarnings = []
