[tool.poetry]
name = "python-boto3"
version = "0.1.0"
description = ""
authors = ["Eremin <haru.eaa@gmail.com>"]
packages = [{include = "python-boto3"}]

[tool.poetry.dependencies]
python = "^3.10.6"
boto3 = "^1.26.97"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
