[tool.poetry]
name = "python-slack-bolt"
version = "0.1.0"
description = ""
authors = ["Eremin <haru.eaa@gmail.com>"]
packages = [{include = "python_slack_bolt"}]

[tool.poetry.dependencies]
python = "^3.10.6"
slack-bolt = "^1.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
